# XY.AI.Workbench

./: .classpath  .gitignore  .project  README.md  TODO.md  build.properties  plugin.xml
mcpc/: .gitignore  .project  README.md  control.sh  pyproject.toml  start.sh
mcpc/project/: project.md
mcpc/project/done/: .gitignore  connections.md  permission_hook.md  tools1.md
mcpc/src/xy/ai/mcpc/: __init__.py  __main__.py  codec.py  config.py  context.py  errors.py  hooks.py  jsonrpc.py  logging_utils.py  protocol.py  registry.py  server.py  session.py  transport.py  ws_transport.py
mcpc/src/xy/ai/mcpc/cli/: __init__.py  manager.py  parameters.py  session.py
mcpc/src/xy/ai/mcpc/control/: __init__.py  handler.py  manager.py
mcpc/src/xy/ai/mcpc/openalex/: __init__.py  client.py  errors.py  presets.py
mcpc/src/xy/ai/mcpc/tools/: CHECKLIST.md  __init__.py  builtin.py  process.py
mcpc/src/xy/ai/mcpc/tools/agent/: __init__.py  profiles.py
mcpc/src/xy/ai/mcpc/tools/ask-user/: __init__.py
mcpc/src/xy/ai/mcpc/tools/bash/: __init__.py
mcpc/src/xy/ai/mcpc/tools/change/: __init__.py
mcpc/src/xy/ai/mcpc/tools/file-stats/: __init__.py
mcpc/src/xy/ai/mcpc/tools/insert/: __init__.py
mcpc/src/xy/ai/mcpc/tools/list/: __init__.py
mcpc/src/xy/ai/mcpc/tools/markdown/: __init__.py
mcpc/src/xy/ai/mcpc/tools/mcp/: __init__.py  bridge.py  client.py  context7.py  exa.py  github.py
mcpc/src/xy/ai/mcpc/tools/openalex/: __init__.py
mcpc/src/xy/ai/mcpc/tools/python/: __init__.py
mcpc/src/xy/ai/mcpc/tools/read/: __init__.py
mcpc/src/xy/ai/mcpc/tools/replace/: __init__.py
(+312 files in other folders)
